--- a/paper/paper-supplementary.Rmd
+++ b/paper/paper-supplementary.Rmd
@@ -83,27 +83,42 @@ Appendix A recalls the necessary notations and
 
 Consider two cyclic granularities $A$ and $B$, such that $A = \{ a_j: j = 1, 2, \dots, J\}$ and $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets. Let $v = \{v_t: t = 0, 1, 2, \dots, T-1\}$ be a continuous measured variable observed across $T$ time points. Let the four elementary designs be $D_{null}$ where there is no difference in distribution of $v$ for $A$ or $B$, $D_{var_f}$ denotes the set of designs where there is difference in distribution of $v$ for $B$ and not for $A$. Similarly, $D_{var_x}$ denotes the set of designs where difference is observed only across $A$. Finally, $D_{var_{all}}$ denotes those designs for which difference is observed across both $A$ and $B$.
 
-# Simulation design
+# Behavior of raw weighted distance measure
+
+## Tuning parameter
+
+How does the tuning parameter affects the value of $wpd$ under different designs? The tuning parameter is used to put relative weight-age to the difference in distributions within and between facets. So it is interesting to see how the value of $wpd$ changes for these two designs.
+
+### Simulation design
+
+Observations are generated from Normal(0,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20\}$. 
+Let $\omega = \{1, 2, \dots, 10\}$ denotes the variable denoting the increment in mean of the distribution. The values of lambda ranges from ${0.1, 0.2, \dots, 0.9}$. Two designs are considered $D_{var_x}$ and $D_{var_f}$ and the values of $wpd$ is being computed for all these different values of the considered variable.
+
+### Results 
+
+Figure \ref{fig:tuning-oneomega} shows how the value of $wpd$ changes for $\lambda = {0.1, 0.2, \dots, 0.9}$ for the two different designs $D_{var_x}$ and $D_{var_f}$ for two values of increment in mean $\omega = {1, 8}$. For a lower value of $\omega$, the two designs intersect at $\lambda > 0.7$ and for a higher $\omega$, the two designs intersect at $\lambda =  0.5$.
+The value of $wpd$ increases with $\lambda$ for $D_{var_x}$ and decreases with increasing $\lambda$ for 
+$D_{var_f}$. Figure \ref{fig:tuning-parameter-inter} shows the value of $\lambda$ for which the two designs intersect across different values of $\omega$. It can be observed that as the value of $\omega$ ($\omega > 4$) increase, the value of $\lambda$ at which the two designs intersect converge is $\lambda = 0.5$.
+
+
+```{r tuning-oneomega, fig.caption = "WPD from two designs are plotted for different values of lambda for different x and facet categories. For omega = 1, the designs intersect for 0.6<lamba<=0.75, whereas for higher omega, design intersects at lambda = 0.5"}
+knitr::include_graphics(here::here("simulations/tuning_param/figs/fixed_omega.png"))
+```
+```{r tuning-parameter-inter, fig.cap ="For most panels it is observed that the most common value of the tuning paramter for which the designs interact is 0.5, which implies any value greater than 0.5 could be chosen to up-weigh the within-facet distances and down-weigh the between-facet distances for most sitatuions."}
+knitr::include_graphics(here::here("simulations/tuning_param/figs/intersection_plot.png"))
+```
+
+# Normalization
+
+
+## Simulation design
 
 Observations are generated from Gamma(2,1), G(0.5, 1), N(0,1), N(0, 5) and N(5, 1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20, 31, 50\}$ to cover a wide range of levels from very low to moderately high. Each combination is being referred to as a _panel_. That is, data is being generated for each of the panels $\{nx = 2, nfacet = 2\}, \{nx = 2, nfacet = 3\}, \{nx = 2, nfacet = 5\},  \dots, \{nx = 50, nfacet = 31\}, \{nx = 50, nfacet = 50\}$. For each of the $64$ panels, $ntimes = 500$ observations are drawn for each combination of the categories. That is, if we consider the panel $\{nx = 2, nfacet = 2\}$, $500$ observations are generated for each of the combination of categories from the panel, namely, $\{(1, 1), (1, 2), (2, 1), (2, 2)\}$. The values
 of $wpd$ is obtained for each of the panels. The measurement variable for each combination of categories in a panel are drawn from the same distribution and hence the design corresponds to $D_{null}$ . Furthermore, this entire method is repeated for each panels $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed.
 
-# Behavior of raw weighted distance measure
+## Different underlying distributions   
 
-
-Following the work of Krzysztofowicz (1997) the empirical NQT involves the following steps:
-1. Sort the sample of measured variable $X$ from the smallest to the largest observation $x_{(1)},\dots, x_{(i)}, .., x_{(n)}$.
-2. Estimate the cumulative probabilities $p_{(1)},\dots, p_{(i)}, .., p_{(n)}$.
-using a plotting position like $i/(n + 1)$ such that $p_{(i)} = P(X \leq x_{(i)})$.
-3. Transforming each observation $x_(i)$ of $X$ into observation $y(i) = Q^{-1}(p(i))$ of the standard normal variate $Y$ , with $Q$ denoting the standard normal distribution and
-$Q^{-1}$ its inverse, applying discrete mapping.
-
-Firstly, we show that NQT works to make the distribution within each panel same. Next, we study the distribution of $wpd$ for different $nx$ and $nfacet$ in various ways.
-
-
-## Normal quantile transform
-
-Since the measure $wpd$ is essentially set up to detect "differences" in distributions irrespective of underlying distribution, it would be ideal if it has minimal dependency on the type, location and scale of the initial distribution. To that end, some data pre-processing through the Normal Score Transform (NQT) has been applied in order to make most asymmetrical distributed measured variables more normal-like. Figure \ref{fig:gamma-diff-wotrans} shows ridge plots of raw $wpd$ for a Gamma(0.5,1), Gamma(2,1) before NQT. It is observed that for the underlying distribution Gamma(2,1), location and scale of the distribution of wpd changes from top-left panel to bottom-right panel. Moreover, the location and scale of the distribution of $wpd$ fir different underlying distribution Gamma(0.5,1), Gamma(2,1). Figure \ref{fig:gamma-diff-quantrans} shows the the distributions of $wpd$ under same underlying distributions but after performing NQT. It is observed that within each panel, the distributions of the $wpd$ looks same, however, the distributions change from extreme top-left panel to bottom-right panels. This implies, NQT has atleast been able to bridge the gap in distribution of $wpd$ for different non-normal underlying distributions.
+Since the measure $wpd$ is essentially set up to detect "differences" in distributions irrespective of underlying distribution, it would be ideal if it has minimal dependency on the type, location and scale of the initial distribution. To that end, some data pre-processing through the Normal Score Transform (NQT) has been applied in order to make most asymmetrical distributed measured variables more normal-like. Figure \ref{fig:gamma-diff-wotrans} shows ridge plots of raw $wpd$ for a Gamma(0.5,1), Gamma(2,1) before NQT. It is observed that for the underlying distribution Gamma(2,1), location and scale of the distribution of wpd changes from top-left panel to bottom-right panel. Moreover, the location and scale of the distribution of $wpd$ for different underlying distribution Gamma(0.5,1), Gamma(2,1). Figure \ref{fig:gamma-diff-quantrans} shows the the distributions of $wpd$ under same underlying distributions but after performing NQT. It is observed that within each panel, the distributions of the $wpd$ looks same, however, the distributions change from extreme top-left panel to bottom-right panels. Similar observations could be made in Figure \ref{fig:normal-diff-quantrans} for different underlying normal distributions  N(0,1), N(5,1) and N(0,5). This implies, NQT has atleast been able to bridge the gap in distribution of $wpd$ for different non-normal underlying distributions. 
 
 ```{r gamma-diff-wotrans, fig.cap="Ridge plots of raw wpd is shown for Gamma(0.5,1), Gamma(2,1) distribution without NQT. The densities change across different facet and x levels and also looks different for the two distributions, which implies wpd value is affected by the change in the shape paramter of the gamma distribution."}
 knitr::include_graphics(here::here("simulations/raw/null_design_scale/figs/gamma_ridge_nxbynfacet.png"))
@@ -113,13 +128,15 @@ knitr::include_graphics(here::here("simulations/raw/null_design_scale/figs/gamma
 knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/diff_mean3_gamma.png"))
 ```
 
-## By distribution
-
 ```{r normal-diff-quantrans, fig.cap = "Ridge plots of raw wpd is shown for N(0,1), N(5,1) and N(0,5) distribution. The densities change across different facet and x levels but look same for each panel, which implies wpd value is unaffected by the change in mean and standard deviation of the normal distribution", eval = FALSE}
 knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/diff_mean3_normal.png"))
 ```
+## Different number of comparisons
 
-## By category levels
+
+# Location and scale
+
+Next, we study the distribution of $wpd$ for different $nx$ and $nfacet$ in various ways.
 
 ```{r nxbyfacet-ridge-N05, fig.cap="Ridge plots of raw wpd is shown for N(0,5) distribution. For each panel, it could be seen that the location shifts to the right for increasing x levels. Across each panel, the scale of the distribution seems to change for low/moderately lower values and higher values of nfacets and left tails are longer for lower facet levels."}
 knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/nxbyfacet_ridge_wpd_N05.png"))
@@ -129,17 +146,14 @@ knitr::include_graphics(here::here("simulations/raw/null_design_quantrans/figs/n
 knitr::include_graphics(here::here("simulations/result_report/","nfacet_by_nx_raw.png"))
 ```
 
-## Tuning parameter
+<!-- Following the work of Krzysztofowicz (1997) the empirical NQT involves the following steps: -->
+<!-- 1. Sort the sample of measured variable $X$ from the smallest to the largest observation $x_{(1)},\dots, x_{(i)}, .., x_{(n)}$. -->
+<!-- 2. Estimate the cumulative probabilities $p_{(1)},\dots, p_{(i)}, .., p_{(n)}$. -->
+<!-- using a plotting position like $i/(n + 1)$ such that $p_{(i)} = P(X \leq x_{(i)})$. -->
+<!-- 3. Transforming each observation $x_(i)$ of $X$ into observation $y(i) = Q^{-1}(p(i))$ of the standard normal variate $Y$ , with $Q$ denoting the standard normal distribution and -->
+<!-- $Q^{-1}$ its inverse, applying discrete mapping. -->
 
-```{r tuning-oneomega, fig.caption = "WPD from two designs are plotted for different values of lambda for different x and facet categories. For omega = 1, the designs intersect for 0.6<lamba<=0.75, whereas for higher omega, design intersects at lambda = 0.5"}
-knitr::include_graphics(here::here("simulations/tuning_param/figs/fixed_omega.png"))
-```
-
-
-```{r tuning-parameter-inter, fig.cap ="For most panels it is observed that the most common value of the tuning paramter for which the designs interact is 0.5, which implies any value greater than 0.5 could be chosen to up-weigh the within-facet distances and down-weigh the between-facet distances for most sitatuions."}
-knitr::include_graphics(here::here("simulations/tuning_param/figs/intersection_plot.png"))
-```
-
+<!-- Firstly, we show that NQT works to make the distribution within each panel same. . -->
 
 
 ## Increment
