NQT steps updated

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1432,6 +1432,30 @@ Granularities},
   number={1},
   pages={145-151},
   doi={10.1109/18.61115}}
+
+@ARTICLE{Krzysztofowicz1997-bv,
+   title     = "Transformation and normalization of variates with specified
+                distributions",
+   author    = "Krzysztofowicz, Roman",
+   abstract  = "Given two continuous random variables X and Y, with specified
+                strictly increasing cumulative distribution functions F and G,
+                respectively, the one-to-one transform t which maps one variate
+                into another, say Y=t(X), has an analytic form, t(X)=G−1(F(X))
+                or t(X)=G−1(1−F(X)), depending upon whether t is increasing or
+                decreasing. This fact of probability theory is reviewed and
+                compared with another method for finding t that was recently
+                proposed. Applications to system identification, normalization
+                of a variate, and normalization of a sample are briefly
+                discussed.",
+   journal   = "J. Hydrol.",
+   publisher = "Elsevier BV",
+   volume    =  197,
+   number    = "1-4",
+   pages     = "286--292",
+   month     =  oct,
+   year      =  1997,
+   language  = "en"
+ }
  
 #### 
 
